--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,3 @@
-html {
-  overflow: hidden;
-}
-
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,7 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  overflow: hidden;
   min-width: 320px;
   min-height: 100vh;
 }
